toggle disable btn added to prevent overlapping

--- a/style.css
+++ b/style.css
@@ -123,7 +123,7 @@ hr {
 /* Task */
 
 .project-field-in-task {
-  margin-top: 30px;
+  margin-top: 25px;
 }
 
 
